bk_ida/gccida/g3/alter_reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/alter_reg/src/reload1.c:2456:29: error: use of undeclared identifier 'machine_mode'
v12 = assign_stack_local( ( machine_mode)v8, v10, -( v7 > v9)); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/alter_reg/src/reload1.c:2482:29: error: use of undeclared identifier 'machine_mode'
v12 = assign_stack_local( ( machine_mode)v8, v10, -( v10 != v9)); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/alter_reg/src/reload1.c:2486:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = ( __int64 *)v15[1]; 
                  ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/alter_reg/src/reload1.c:2502:32: error: use of undeclared identifier 'machine_mode'
v18 = adjust_address_1( v12, ( machine_mode)v8, 0LL, 0, 1); 
                               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/alter_reg/src/obj/reload1.o] Error 1
